--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="8dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:elevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/gray">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
@@ -22,8 +23,8 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/developer_image" />
 
-        <TextView
-            android:id="@+id/list_name"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/user_item_name"
             style="@style/Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,16 +35,17 @@
             app:layout_constraintVertical_bias="0.0"
             tools:text="Ricky Alturino" />
 
-        <TextView
-            android:id="@+id/list_detail"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/user_item_type"
             style="@style/Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="2"
-            app:layout_constraintBottom_toBottomOf="@+id/user_image"
-            app:layout_constraintStart_toStartOf="@+id/list_name"
-            app:layout_constraintTop_toBottomOf="@+id/list_name"
-            tools:text="Halo Ini Ricky" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="@+id/user_item_name"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/user_item_name"
+            app:layout_constraintTop_toBottomOf="@+id/user_item_name"
+            tools:text="User" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
