--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,8 @@
     <color name="secondaryLightColor">#5e92f3</color>
     <color name="secondaryDarkColor">#003c8f</color>
     <color name="secondaryTextColor">#ffffff</color>
+
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#F4F4F4</color>
 </resources>
