--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,53 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/user_item_container"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:elevation="8dp">
+    android:background="@color/white"
+    android:clickable="true"
+    android:focusable="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/user_item_image"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/developer_image" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/user_item_name"
+        style="@style/Body2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/gray">
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/user_item_image"
+        app:layout_constraintStart_toEndOf="@+id/user_item_image"
+        app:layout_constraintTop_toTopOf="@+id/user_item_image"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Ricky Alturino" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_image"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginVertical="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/developer_image" />
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/user_item_type"
+        style="@style/Caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/user_item_name"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/user_item_name"
+        app:layout_constraintTop_toBottomOf="@+id/user_item_name"
+        tools:text="User" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/user_item_name"
-            style="@style/Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/user_image"
-            app:layout_constraintStart_toEndOf="@+id/user_image"
-            app:layout_constraintTop_toTopOf="@+id/user_image"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="Ricky Alturino" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/user_item_type"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/user_item_name"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/user_item_name"
-            app:layout_constraintTop_toBottomOf="@+id/user_item_name"
-            tools:text="User" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</com.google.android.material.card.MaterialCardView>
 
